Added check for existance of the FindBarController before causing it to be created on demand. This should prevent a startup performance regression.

Bug: 783350
Change-Id: Idbf4243e22db833fba8123c6b9e828c8c953ff12